--- a/static/css/editEstilo.css
+++ b/static/css/editEstilo.css
@@ -129,11 +129,26 @@ body {
     }
 }
 
+.search-container {
+    width: 50%;
+    padding: 10px 15px 10px 40px;
+    border: none;
+    border-radius: 30px;
+    font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.9);
+    transition: var(--transition);
+}
+
+.search-box {
+    border: none;
+}
+
 /* Foto de perfil */
 .profile-picture-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 75px;
     gap: 20px;
 }
 
@@ -332,6 +347,7 @@ body {
     justify-content: center;
     width: 40px;
     height: 40px;
+    text-decoration: none;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--white);
