--- a/templates/meusEmprestimos.html
+++ b/templates/meusEmprestimos.html
@@ -37,11 +37,16 @@
         </form>
         <div class="header-right">
             <div class="menu-container">
-                <div class="menu-icon" id="menuButton" style="margin-right: 10px; margin-bottom: 10px;">
-                    <div class="menulinha"></div>
-                    <div class="menulinha"></div>
-                    <div class="menulinha"></div>
-                </div>
+                <button class="btn" id="menuButton">
+                        <span class="icon">
+                            <svg viewBox="0 0 175 80" width="40" height="40">
+                                <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                                <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                                <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                            </svg>
+                        </span>
+                        <span class="text">MENU</span>
+                    </button>
                 <ul class="dropdown-menu" id="dropdownMenu"></ul>
             </div>
         </div>
