--- a/static/css/emprestimos.css
+++ b/static/css/emprestimos.css
@@ -194,8 +194,9 @@ header {
 
 /* Logo */
 .header-left img {
-    width: 50px;
-    height: auto;
+  width: 50px;
+  margin-left: 10px;
+  height: auto;
 }
 
 /* Barra de pesquisa */
