--- a/static/css/listagemEmprestimo.css
+++ b/static/css/listagemEmprestimo.css
@@ -50,9 +50,9 @@ header {
 /* Logo */
 .header-left img {
     width: 50px;
+    margin-left: 10px;
     height: auto;
 }
-
 /* Barra de pesquisa */
 .search-container {
     display: flex;
