--- a/static/css/detalheReserva.css
+++ b/static/css/detalheReserva.css
@@ -1,3 +1,4 @@
+
 * {
     padding: 0;
     margin: 0;
@@ -75,6 +76,7 @@ header {
 /* Logo */
 .header-left img {
     width: 50px;
+    margin-left: 10px;
     height: auto;
 }
 
