--- a/static/css/gerenciarMultas.css
+++ b/static/css/gerenciarMultas.css
@@ -7,11 +7,12 @@
     font-family: "Montserrat", sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
-    color:black;
+    color: black;
 }
-:root{
+
+:root {
     --azul: #3380ca;
     --azul-claro: #4292DC;
     --azul-escuro: #0060BB;
@@ -22,15 +23,17 @@ a{
     --azul-modoescuro: #73A8FE;
 }
 
-.sair{
+.sair {
     background-color: #00010000;
     border: #00010000;
 }
-.sair:hover{
+
+.sair:hover {
     background-color: #00010000;
     border: #00010000;
     color: black;
 }
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -50,6 +53,7 @@ header {
 /* Logo */
 .header-left img {
     width: 50px;
+    margin-left: 10px;
     height: auto;
 }
 
@@ -77,6 +81,7 @@ header {
     padding: 5px;
     background-color: white;
 }
+
 .btn-catalogo {
     background-color: #3380ca;
 }
@@ -85,6 +90,7 @@ header {
     color: rgb(178, 178, 178) !important;
     background-color: #4086c6;
 }
+
 /* Dark Mode */
 .switch-container {
     display: flex;
@@ -129,11 +135,11 @@ header {
     background-color: white;
 }
 
-input:checked + .slider {
+input:checked+.slider {
     background-color: #000100;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
     transform: translateX(22px);
     background-color: #1C82E3;
 }
@@ -195,15 +201,17 @@ input:checked + .slider:before {
     margin: 0;
 }
 
-.header-end{
+.header-end {
     margin-bottom: 15px;
 }
 
 
 .menu-item {
     display: flex;
-    flex-direction: column; /* ← isso força tudo a ficar empilhado para baixo */
-    align-items: flex-start; /* opcional, para alinhar à esquerda */
+    flex-direction: column;
+    /* ← isso força tudo a ficar empilhado para baixo */
+    align-items: flex-start;
+    /* opcional, para alinhar à esquerda */
 }
 
 .menu-item {
@@ -218,7 +226,8 @@ input:checked + .slider:before {
 }
 
 .submenu.show {
-    display: flex; /* ou display: block */
+    display: flex;
+    /* ou display: block */
 }
 
 /* Estilo dos itens do submenu */
@@ -360,65 +369,98 @@ select {
 
 /* Modal */
 #modal-edicao {
-    display: flex; /* Usar flexbox para centralizar o conteúdo */
-    flex-direction: column; /* Organizar os elementos em coluna */
-    justify-content: center; /* Centralizar verticalmente */
-    align-items: center; /* Centralizar horizontalmente */
-    position: fixed; /* Fixa o modal na tela */
-    top: 0; /* Alinha ao topo da tela */
-    left: 0; /* Alinha à esquerda da tela */
-    width: 100%; /* Largura total da tela */
-    height: 100%; /* Altura total da tela */
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
-    z-index: 1000; /* Coloca o modal acima de outros elementos */
+    display: flex;
+    /* Usar flexbox para centralizar o conteúdo */
+    flex-direction: column;
+    /* Organizar os elementos em coluna */
+    justify-content: center;
+    /* Centralizar verticalmente */
+    align-items: center;
+    /* Centralizar horizontalmente */
+    position: fixed;
+    /* Fixa o modal na tela */
+    top: 0;
+    /* Alinha ao topo da tela */
+    left: 0;
+    /* Alinha à esquerda da tela */
+    width: 100%;
+    /* Largura total da tela */
+    height: 100%;
+    /* Altura total da tela */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Fundo semi-transparente */
+    z-index: 1000;
+    /* Coloca o modal acima de outros elementos */
 }
 
 #form-edicao {
-    background-color: white; /* Fundo branco para o formulário */
-    padding: 20px; /* Espaçamento interno */
-    border-radius: 10px; /* Bordas arredondadas */
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Sombra para dar profundidade */
-    width: 400px; /* Largura do modal */
+    background-color: white;
+    /* Fundo branco para o formulário */
+    padding: 20px;
+    /* Espaçamento interno */
+    border-radius: 10px;
+    /* Bordas arredondadas */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    /* Sombra para dar profundidade */
+    width: 400px;
+    /* Largura do modal */
 }
 
 #form-edicao label {
-    font-weight: bold; /* Negrito para os rótulos */
-    margin-bottom: 5px; /* Espaçamento abaixo dos rótulos */
+    font-weight: bold;
+    /* Negrito para os rótulos */
+    margin-bottom: 5px;
+    /* Espaçamento abaixo dos rótulos */
 }
 
 #form-edicao input {
-    width: 100%; /* Largura total dos inputs */
-    padding: 10px; /* Espaçamento interno dos inputs */
-    margin-bottom: 15px; /* Espaçamento abaixo dos inputs */ /* Borda azul */
-    border-radius: 5px; /* Bordas arredondadas */
+    width: 100%;
+    /* Largura total dos inputs */
+    padding: 10px;
+    /* Espaçamento interno dos inputs */
+    margin-bottom: 15px;
+    /* Espaçamento abaixo dos inputs */
+    /* Borda azul */
+    border-radius: 5px;
+    /* Bordas arredondadas */
     border: 1px solid #3380ca;
-    background-color:#eef3ff;
+    background-color: #eef3ff;
 }
 
 #form-edicao button {
-    width: 100px; /* Largura dos botões */
-    padding: 10px; /* Espaçamento interno dos botões */
-    border-radius: 5px; /* Bordas arredondadas */
-    cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
+    width: 100px;
+    /* Largura dos botões */
+    padding: 10px;
+    /* Espaçamento interno dos botões */
+    border-radius: 5px;
+    /* Bordas arredondadas */
+    cursor: pointer;
+    /* Cursor de ponteiro ao passar o mouse */
 }
 
 #form-edicao button[type="submit"] {
-    background-color: var(--azul-escuro); /* Cor de fundo do botão de salvar */
-    color: white; /* Cor do texto do botão de salvar */
+    background-color: var(--azul-escuro);
+    /* Cor de fundo do botão de salvar */
+    color: white;
+    /* Cor do texto do botão de salvar */
 }
 
 #form-edicao button[type="button"] {
-    background-color: #ccc; /* Cor de fundo do botão de cancelar */
-    color: #333; /* Cor do texto do botão de cancelar */
+    background-color: #ccc;
+    /* Cor de fundo do botão de cancelar */
+    color: #333;
+    /* Cor do texto do botão de cancelar */
 }
 
 #form-edicao button:hover {
-    transform: scale(1.05); /* Efeito de aumento ao passar o mouse */
-    transition: transform 0.3s; /* Transição suave para o efeito de aumento */
+    transform: scale(1.05);
+    /* Efeito de aumento ao passar o mouse */
+    transition: transform 0.3s;
+    /* Transição suave para o efeito de aumento */
 }
 
 /* SÍMBOLOS DAS OPÇÕES */
-.fa-circle-user{
+.fa-circle-user {
     padding-right: 2px;
     margin-left: -1px;
 }
@@ -486,10 +528,10 @@ select {
     padding-right: 7px;
     padding-left: 1px;
 }
-  
-  /* SUB-MODAIS DOS RELATÓRIOS */
-  /* Estilo do submenu */
-  .submenu {
+
+/* SUB-MODAIS DOS RELATÓRIOS */
+/* Estilo do submenu */
+.submenu {
     display: none;
     /* Esconde o submenu por padrão */
     padding-left: 20px;
@@ -499,21 +541,21 @@ select {
     position: relative;
     /* Para que o submenu seja posicionado em relação ao item pai */
     font-size: 15px;
-  }
-  
-  .submenu.show {
+}
+
+.submenu.show {
     display: flex;
     /* Mostra o submenu quando a classe 'show' é adicionada */
-  
+
     flex-direction: column;
     /* Alinha os itens do submenu em coluna > DEPOIS PRECISO MEXER NISSO*/
-  
+
     margin-top: 5px;
     /* Espaço entre o item pai e o submenu */
-  }
-  
-  /* Estilo dos itens do submenu */
-  .submenu-item {
+}
+
+/* Estilo dos itens do submenu */
+.submenu-item {
     padding: 5px 10px;
     /* Espaçamento para os itens do submenu */
     color: #333;
@@ -522,12 +564,12 @@ select {
     /* Cursor de ponteiro */
     transition: background 0.3s;
     /* Transição suave para o fundo */
-  }
-  
-  .submenu-item:hover {
+}
+
+.submenu-item:hover {
     background-color: #f0f0f0;
     /* Cor de fundo ao passar o mouse */
-  }  
+}
 
 /* Imagem do perfil no menu */
 .menu-icon-img {
@@ -537,21 +579,23 @@ select {
 }
 
 
-.form-control{  
+.form-control {
     border-radius: 5px;
     margin-bottom: 10px;
     border: 3px solid #3380ca;
-    background-color:#eef3ff;
+    background-color: #eef3ff;
     font-weight: bold;
 }
-.btn-save{
+
+.btn-save {
     color: #4292dc;
     background-color: white;
     border: 4px solid #4292dc;
     width: 100px;
     border-radius: 5px;
 }
-.btn-save:hover{
+
+.btn-save:hover {
     background-color: #4292dc;
     color: white;
     border-radius: 5px;
@@ -570,7 +614,7 @@ select {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-#tabela-usuarios th, 
+#tabela-usuarios th,
 #tabela-usuarios td {
     padding: 15px;
     text-align: left;
@@ -648,10 +692,10 @@ button.botao-multas {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-  }
-  
-  .modal-content {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
     background-color: white;
     margin: 10% auto;
     padding: 30px;
@@ -661,66 +705,66 @@ button.botao-multas {
     flex-direction: column;
     gap: 10px;
     position: relative;
-  }
-  
-  .fechar {
+}
+
+.fechar {
     position: absolute;
     top: -5px;
     right: 5px;
     font-size: 30px;
     font-weight: bold;
     cursor: pointer;
-  }
+}
 
 .acoes {
-  --color: #3380ca;
-  background-color: white;
-  font-family: inherit;
-  display: inline-block;
-  margin-right: -50px;
-  width: 6em;
-  height: 2.5em;
-  line-height: 2.5em;
-  position: relative;
-  cursor: pointer;
-  overflow: hidden;
-  border: 2px solid var(--azul);
-  transition: color 0.5s;
-  z-index: 1;
-  font-size: 17px;
-  font-weight: bold;
-  border-radius: 6px;
-  color: var(--azul);
+    --color: #3380ca;
+    background-color: white;
+    font-family: inherit;
+    display: inline-block;
+    margin-right: -50px;
+    width: 6em;
+    height: 2.5em;
+    line-height: 2.5em;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    border: 2px solid var(--azul);
+    transition: color 0.5s;
+    z-index: 1;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 6px;
+    color: var(--azul);
 }
 
 .acoes:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  background: var(--color);
-  height: 120px;
-  width: 500px;
-  border-radius: 50%;
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 120px;
+    width: 500px;
+    border-radius: 50%;
 }
 
 .acoes:hover {
-  color: white;
+    color: white;
 }
 
 .acoes:before {
-  top: 100%;
-  left: 100%;
-  transition: all 0.7s;
+    top: 100%;
+    left: 100%;
+    transition: all 0.7s;
 }
 
 .acoes:hover:before {
-  top: -30px;
-  left: -30px;
+    top: -30px;
+    left: -30px;
 }
 
 .acoes:active:before {
-  background: #0060BB;
-  transition: background 0s;
+    background: #0060BB;
+    transition: background 0s;
 }
 
 .botao-multar {
@@ -801,14 +845,12 @@ button.botao-multas {
 
 .btn-primary {
     padding: 7px;
-    padding-left: 60px;
-    padding-right: 60px;
-    margin-bottom: -50px;
+    padding-left: 50px;
+    padding-right: 50px;
     background-color: var(--azul);
     font-weight: bold;
-    display: block;
-    margin: 0 auto;
-    width: 280px;
+    margin-top: 20px;
+    margin-left: 420px;
     transition: background-color 0.3s, transform 0.3s;
 }
 
@@ -818,7 +860,7 @@ button.botao-multas {
     transition: background-color 0.3s, transform 0.3s;
 }
 
-footer{
+footer {
     margin-top: 30px;
 }
 
@@ -845,7 +887,7 @@ label {
     margin-bottom: 5px;
 }
 
-.redes i{
+.redes i {
     color: var(--branco);
     font-size: 40px;
     margin: 10px;
@@ -904,7 +946,8 @@ label {
     margin-top: 17px;
     margin-right: 5px;
 }
-body img{
+
+body img {
     width: 110px;
     height: 80px;
 }
@@ -953,7 +996,7 @@ body img{
     color: var(--branco);
 }
 
-footer{
+footer {
     margin-top: 80px;
 }
 
@@ -968,7 +1011,8 @@ footer{
     }
 
     .header-left img {
-        width: 40px; /* Ajuste no tamanho do logo */
+        width: 40px;
+        /* Ajuste no tamanho do logo */
     }
 
     .header-center {
@@ -980,7 +1024,8 @@ footer{
     }
 
     .search-container {
-        width: 150px; /* Reduzindo a largura da pesquisa */
+        width: 150px;
+        /* Reduzindo a largura da pesquisa */
         padding: 5px 10px;
         border-radius: 20px;
     }
@@ -1018,7 +1063,8 @@ footer{
 
 @media (max-width: 480px) {
     .search-container {
-        width: 120px; /* Ajuste fino para telas muito pequenas */
+        width: 120px;
+        /* Ajuste fino para telas muito pequenas */
     }
 
     .switch-container {
@@ -1032,18 +1078,19 @@ footer{
 
 @media (max-width: 480px) {
 
-    .logo_rodape{
+    .logo_rodape {
         display: none;
     }
-        .wrapper .icon {
-            width: 30px;
-            height: 30px;
-        }
-    
-        .wrapper .icon svg {
-            width: 14px;
-            height: 14px;
-        }
+
+    .wrapper .icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .wrapper .icon svg {
+        width: 14px;
+        height: 14px;
+    }
 
     .rodape-inter {
         display: flex;
@@ -1059,7 +1106,7 @@ footer{
         padding: 2px;
     }
 
-    .search-container{
+    .search-container {
         width: 200px;
     }
 
@@ -1067,7 +1114,7 @@ footer{
         width: 25px;
     }
 
-    .localizacao{
+    .localizacao {
         width: 1%;
     }
 
@@ -1084,7 +1131,8 @@ footer{
         text-align: center;
         flex-direction: column;
     }
-    .separacao1 p{
+
+    .separacao1 p {
         margin-top: 10px;
         font-size: 15px;
     }
@@ -1099,9 +1147,9 @@ footer{
     }
 }
 
-@media (max-width: 380px){
+@media (max-width: 380px) {
 
-    .logo_rodape{
+    .logo_rodape {
         display: none;
     }
 
@@ -1126,10 +1174,11 @@ footer{
         justify-content: center;
     }
 
-    .nomeUsuario{
+    .nomeUsuario {
         font-size: 15px
     }
-    .span{
+
+    .span {
         font-size: 15px
     }
 
