--- a/static/css/home.css
+++ b/static/css/home.css
@@ -17,6 +17,23 @@
     --azul-modoescuro: #73A8FE;
 }
 
+:root {
+    --primary-color: #2c3e50;
+    --secondary-color: #3498db;
+    --terciary-color: #2a6b97;
+    --accent-color: #e74c3c;
+    --light-color: #ecf0f1;
+    --dark-color: #2c3e50;
+    --success-color: #1aac5f;
+    --warning-color: #f39c12;
+    --danger-color: #e90039;
+    --text-color: #333;
+    --text-light: #7f8c8d;
+    --white: #fff;
+    --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    --transition: all 0.3s ease;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -82,31 +99,6 @@ header {
     gap: 16px;
     align-items: center;
 }
-
-/* Barra de pesquisa */
-.search-container {
-    display: flex;
-    align-items: center;
-    background-color: var(--branco);
-    padding: 2px 20px;
-    border-radius: 25px;
-    width: 600px;
-}
-
-.search-container i {
-    color: var(--preto);
-    margin-right: 8px;
-    font-size: 1.2rem;
-}
-
-.search-box {
-    border: none;
-    outline: none;
-    font-size: 1.1rem;
-    width: 100%;
-    padding: 5px;
-}
-
 
 /* Ícone do menu */
 .header-container {
@@ -413,6 +405,64 @@ header {
     color: #06005c;
 }
 
+.btn-catalogo {
+  width: 50px;
+  height: 35px;
+  border-radius: 8px;
+  background-color: var(--secondary-color);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  text-decoration: none !important;
+}
+
+.edit-svgIcon {
+  width: 17px;
+  transition-duration: 0.3s;
+}
+
+.edit-svgIcon path {
+  fill: white;
+}
+
+.btn-catalogo:hover {
+  width: 120px;
+  border-radius: 8px;
+  transition-duration: 0.3s;
+  background-color: var(--terciary-color);
+  align-items: center;
+}
+
+.btn-catalogo:hover .edit-svgIcon {
+  width: 20px;
+  transition-duration: 0.3s;
+  transform: translateX(20%);
+}
+
+.btn-catalogo::before {
+  display: none;
+  content: "Catálogo";
+  color: white;
+  transition-duration: 0.3s;
+  font-size: 2px;
+}
+
+.btn-catalogo:hover::before {
+  display: block;
+  padding-right: 10px;
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(0px);
+  transition-duration: 0.3s;
+}
+
 .inter {
     background-color: var(--escuro);
 }
@@ -687,28 +737,6 @@ footer {
     }
 }
 
-
-
-
-
-
-/* Variáveis de cores */
-:root {
-    --primary-color: #2c3e50;
-    --secondary-color: #3498db;
-    --accent-color: #e74c3c;
-    --light-color: #ecf0f1;
-    --dark-color: #2c3e50;
-    --success-color: #2ecc71;
-    --warning-color: #f39c12;
-    --danger-color: #e74c3c;
-    --text-color: #333;
-    --text-light: #7f8c8d;
-    --white: #fff;
-    --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    --transition: all 0.3s ease;
-}
-
 /* Reset e estilos base */
 * {
     margin: 0;
@@ -825,7 +853,7 @@ a {
   font-weight: 600;
   display: flex;
   align-items: center;
-  background: #2980b9;
+  background: var(--secondary-color);
   color: #f5f5f5;
 }
 
@@ -1032,7 +1060,7 @@ a {
 .book-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: var(--transition);
 }
 
@@ -1053,10 +1081,12 @@ a {
 
 .book-badge.available {
     background-color: var(--success-color);
+    color: #d7fee9;
 }
 
 .book-badge.unavailable {
     background-color: var(--danger-color);
+    color: #ffd9de;
 }
 
 .book-info {
